--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>DocumentHash</title>
-  <base href="/">
+    <meta charset="utf-8">
+    <title>Document Hash Blockchain | Project Partners</title>
+    <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="/assets/favicon.png">
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
+<script src="/assets/web3.js"></script>
 </body>
 </html>
